--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 PyGithub~=2.8.1
 python-dotenv~=1.1.1
 langchain~=0.3.27
-python-frontmatter
+python-frontmatter~=1.1.0
+openai~=2.1.0
+numpy~=2.3.3
+faiss-cpu
