--- a/.gitignore
+++ b/.gitignore
@@ -205,5 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
-/src/main/data/
 /.idea/misc.xml
+/src/main/vector_store/
+/src/main/data/
