--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ langchain~=0.3.27
 python-frontmatter~=1.1.0
 openai~=2.1.0
 numpy~=2.3.3
-faiss-cpu
+faiss-cpu~=1.12.0
+fastapi~=0.118.0
+pydantic~=2.11.10
+uvicorn
